--- a/package.json
+++ b/package.json
@@ -1,91 +1,62 @@
 {
-	"name": "globby",
-	"version": "13.1.2",
-	"description": "User-friendly glob matching",
-	"license": "MIT",
-	"repository": "sindresorhus/globby",
-	"funding": "https://github.com/sponsors/sindresorhus",
-	"author": {
-		"email": "sindresorhus@gmail.com",
-		"name": "Sindre Sorhus",
-		"url": "https://sindresorhus.com"
-	},
-	"type": "module",
-	"exports": "./index.js",
-	"engines": {
-		"node": "^12.20.0 || ^14.13.1 || >=16.0.0"
-	},
-	"scripts": {
-		"bench": "npm update @globby/main-branch glob-stream fast-glob && node bench.js",
-		"test": "xo && ava && tsd"
-	},
-	"files": [
-		"index.js",
-		"index.d.ts",
-		"ignore.js",
-		"utilities.js"
-	],
-	"keywords": [
-		"all",
-		"array",
-		"directories",
-		"expand",
-		"files",
-		"filesystem",
-		"filter",
-		"find",
-		"fnmatch",
-		"folders",
-		"fs",
-		"glob",
-		"globbing",
-		"globs",
-		"gulpfriendly",
-		"match",
-		"matcher",
-		"minimatch",
-		"multi",
-		"multiple",
-		"paths",
-		"pattern",
-		"patterns",
-		"traverse",
-		"util",
-		"utility",
-		"wildcard",
-		"wildcards",
-		"promise",
-		"gitignore",
-		"git"
-	],
-	"dependencies": {
-		"dir-glob": "^3.0.1",
-		"fast-glob": "^3.2.11",
-		"ignore": "^5.2.0",
-		"merge2": "^1.4.1",
-		"slash": "^4.0.0"
-	},
-	"devDependencies": {
-		"@globby/main-branch": "sindresorhus/globby#main",
-		"@types/node": "^17.0.10",
-		"ava": "^4.0.1",
-		"benchmark": "2.1.4",
-		"get-stream": "^6.0.1",
-		"glob-stream": "^7.0.0",
-		"rimraf": "^3.0.2",
-		"tsd": "^0.19.1",
-		"typescript": "^4.5.5",
-		"xo": "^0.47.0"
-	},
-	"xo": {
-		"ignores": [
-			"fixtures"
-		]
-	},
-	"ava": {
-		"files": [
-			"!tests/utilities.js"
-		],
-		"workerThreads": false
-	}
+  "name": "globby2",
+  "version": "0.0.1",
+  "description": "Modernized fork of globby",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/**/*"
+  ],
+  "scripts": {
+    "clean-unit-tests": "rimraf ./build-test",
+    "build-unit-tests": "tsc -p ./tsconfig.unit-tests.json",
+    "run-unit-tests": "jest",
+    "unit-tests": "npm run clean-unit-tests && npm run build-unit-tests && npm run run-unit-tests",
+    "lint": "eslint -c .eslintrc.json ./src --ext .ts",
+    "lint-errors-only": "eslint -c .eslintrc.json ./src --ext .ts --quiet",
+    "clean-ts-dist": "rimraf ./dist",
+    "build-ts-dist": "npm run clean-ts-dist && tsc -p ./tsconfig.dist.json",
+    "clean-ts": "rimraf ./build-ts",
+    "build-ts": "npm run clean-ts && tsc -p ./tsconfig.all.json",
+    "clean": "npm run clean-unit-tests && npm run clean-ts && npm run clean-ts-dist",
+    "check": "npm rum lint-errors-only && npm run build-ts && npm run unit-tests && echo Done!"
+  },
+  "repository": "https://github.com/samhuk/globby",
+  "author": {
+    "name": "Sam Hughes",
+    "email": "samhughes1701@hotmail.co.uk",
+    "url": "http://samhuk.com/contact"
+  },
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
+  "dependencies": {
+    "dir-glob": "^3.0.1",
+    "fast-glob": "^3.2.12",
+    "ignore": "^5.2.0",
+    "merge2": "^1.4.1",
+    "slash": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/dir-glob": "^2.0.1",
+    "@types/jest": "^29.1.2",
+    "@types/merge2": "^1.3.1",
+    "@types/node": "^18.8.3",
+    "@types/pg": "^8.6.5",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "babel-jest": "^29.1.2",
+    "concurrently": "^7.4.0",
+    "env-cmd": "^10.1.0",
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.9",
+    "jest": "^29.1.2",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
+  }
 }
