--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "globsie",
-  "version": "0.0.6",
-  "description": "Modernized fork of globby",
+  "version": "0.0.7",
+  "description": "Modernized globby fork",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -35,8 +35,7 @@
     "dir-glob": "^3.0.1",
     "fast-glob": "^3.2.12",
     "ignore": "^5.2.0",
-    "merge2": "^1.4.1",
-    "slash": "^5.0.0"
+    "merge2": "^1.4.1"
   },
   "devDependencies": {
     "@types/dir-glob": "^2.0.1",
