--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "dir-glob": "^3.0.1",
     "fast-glob": "^3.2.12",
     "ignore": "^5.2.0",
-    "merge2": "^1.4.1"
+    "merge2": "^1.4.1",
+    "slash": "^5.0.0"
   },
   "devDependencies": {
     "@types/dir-glob": "^2.0.1",
