--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "globsie",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "Modernized globby fork",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -35,8 +35,7 @@
     "dir-glob": "^3.0.1",
     "fast-glob": "^3.2.12",
     "ignore": "^5.2.0",
-    "merge2": "^1.4.1",
-    "slash": "^5.0.0"
+    "merge2": "^1.4.1"
   },
   "devDependencies": {
     "@types/dir-glob": "^2.0.1",
